render cookies per hour

--- a/index.html
+++ b/index.html
@@ -11,7 +11,29 @@
     </head>
     </header>
     <main>
-      <ul></ul>
+      <section>
+      <ul id="seattle"></ul>
+      </section>
+
+      <section>
+        <ul id="tokyo">
+        </ul>
+      </section>
+
+      <section>
+        <ul id="dubai">
+        </ul>
+      </section>
+
+      <section>
+        <ul id="paris">
+        </ul>
+      </section>
+
+      <section>
+        <ul id="lima">
+        </ul>
+      </section>
     </main>
     <footer>
       <p>Contact us at info@salmoncookies.com</p>
