--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <header>
       <h1>Pat's Salmon Cookies</h1>
     </head>
+    <a href="sales.html">
     </header>
     <main>
       <section>
@@ -38,6 +39,5 @@
     <footer>
       <p>Contact us at info@salmoncookies.com</p>
     </footer>
-    <script src="app.js"></script>
   </body>
 </html>
