--- a/sales.html
+++ b/sales.html
@@ -34,6 +34,6 @@
     </main>
     <footer>
     </footer>
-    <script src="app.js"></script>
+    <script src="js/app2.js"></script>
   </body>
 </html>
