--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <a href="sales.html">
     </header>
     <main>
-      <section>
+      <table>
+        <tbody id="table"></tbody>
+      </table>
+      <!-- <section>
       <ul id="seattle"></ul>
       </section>
 
@@ -34,7 +37,7 @@
       <section>
         <ul id="lima">
         </ul>
-      </section>
+      </section> -->
     </main>
     <footer>
       <p>Contact us at info@salmoncookies.com</p>
