--- a/sales.html
+++ b/sales.html
@@ -12,25 +12,9 @@
     <a href="sales.html">
     </header>
     <main>
-      <section>
-      <ul id="seattle"></ul>
-      </section>
-
-      <section>
-        <ul id="tokyo"></ul>
-      </section>
-
-      <section>
-        <ul id="dubai"></ul>
-      </section>
-
-      <section>
-        <ul id="paris"> </ul>
-      </section>
-
-      <section>
-        <ul id="lima"></ul>
-      </section>
+      <table>
+        <tbody id="table"></tbody>
+      </table>
     </main>
     <footer>
     </footer>
