dubai data correction

--- a/sales.html
+++ b/sales.html
@@ -2,12 +2,13 @@
 
 <html>
   <head>
-    <title>Pat's Salmon Cookies</title>
+    <title>Pat's Salmon Cookies Sales</title>
     <link href="css/style.css" rel="stylesheet" type="text.css"/>
   </head>
   <body>
     <header>
-      <h1>Pat's Salmon Cookies. Sales page.</h1>
+      <h1>Pat's Salmon Cookies</h1>
+      <h2>Sales Page</h2>
     </head>
     <a href="sales.html">
     </header>
