--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <header>
       <h1>Pat's Salmon Cookies</h1>
     </head>
-    <a href="sales.html">
-    </header>
+    <a href="sales.html">Sales Page</a>
+      </header>
     <main>
       <table>
         <tbody id="table"></tbody>
