--- a/sales.html
+++ b/sales.html
@@ -3,14 +3,16 @@
 <html>
   <head>
     <title>Pat's Salmon Cookies Sales</title>
-    <link href="css/style.css" rel="stylesheet" type="text.css"/>
+    <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@700&display=swap" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet" type="text/css"/> 
   </head>
   <body>
     <header>
       <h1>Pat's Salmon Cookies</h1>
       <h2>Sales Page</h2>
     </head>
-    <a href="sales.html">
+    <a href="index.html">Home Page</a>
     </header>
     <main>
       <table>
