--- a/index.html
+++ b/index.html
@@ -3,44 +3,63 @@
 <html>
   <head>
     <title>Pat's Salmon Cookies</title>
-    <link href="css/style.css" rel="stylesheet" type="text.css"/>
+    <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@400;700&display=swap" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet" type="text/css"/> 
   </head>
   <body>
-    <header>
-      <h1>Pat's Salmon Cookies</h1>
-    </head>
-    <a href="sales.html">Sales Page</a>
+      <nav>
+        <ul id="navigation">
+          <li>About us</li>
+          <li>Menu</li>
+          <li>Events</li>
+          <li>Locations</li>
+          <li>Merch</li>
+          <li><a href="sales.html">Sales Page</a></li>
+        </ul>
+      </nav>
+      <hr>
+      <header>
+        <h1>Welcome to <span>Pat's Salmon Cookies</h1></span></h1>
+        <img id="bigfish" src="images/chinook.jpg" alt="illustration of fish"/>
       </header>
-    <main>
-      <table>
-        <tbody id="table"></tbody>
-      </table>
-      <!-- <section>
-      <ul id="seattle"></ul>
-      </section>
+      <hr>
+      <main>
+        <article>
+          <h2>About us</h2>
+          <img id="family" src="images/familySalmonCookie.jpg" alt="family of 4 with bleached teeth drinking milk in the kitchen "/>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ante in nibh mauris cursus. Iaculis nunc sed augue lacus. Dignissim convallis aenean et tortor at risus viverra adipiscing. Felis eget velit aliquet sagittis id consectetur purus. Dolor purus non enim praesent elementum facilisis leo vel. Venenatis urna cursus eget nunc. Nec dui nunc mattis enim ut tellus elementum sagittis vitae. Rhoncus urna neque viverra justo nec ultrices dui. Molestie at elementum eu facilisis sed. Placerat in egestas erat imperdiet sed euismod nisi. Cras ornare arcu dui vivamus arcu felis bibendum ut. Ut aliquam purus sit amet luctus venenatis lectus magna. Sapien faucibus et molestie ac feugiat sed lectus vestibulum. Scelerisque purus semper eget duis at tellus. Malesuada pellentesque elit eget gravida.
 
-      <section>
-        <ul id="tokyo">
-        </ul>
-      </section>
-
-      <section>
-        <ul id="dubai">
-        </ul>
-      </section>
-
-      <section>
-        <ul id="paris">
-        </ul>
-      </section>
-
-      <section>
-        <ul id="lima">
-        </ul>
-      </section> -->
-    </main>
-    <footer>
-      <p>Contact us at info@salmoncookies.com</p>
-    </footer>
-  </body>
-</html>
+Nibh venenatis cras sed felis. Tempus iaculis urna id volutpat lacus. Sit amet risus nullam eget felis. Sed adipiscing diam donec adipiscing. Neque ornare aenean euismod elementum nisi quis eleifend quam. Suspendisse ultrices gravida dictum fusce ut placerat. Elementum nisi quis eleifend quam. Adipiscing elit pellentesque habitant morbi tristique senectus et netus. Erat velit scelerisque in dictum non consectetur a erat. Aliquam ut porttitor leo a diam sollicitudin tempor id eu.
+        </article>
+        <hr>
+        <section>
+          <h2>Menu</h2>
+          <img id="cookie" src="images/frosted-cookie.jpg" alt="fish shaped cookie"/>
+        </section>
+        <setion>
+          <h2>Events</h2>
+          <img src="images/fish.jpg" alt="illustration of 4 fish"/>
+        </setion>
+        <section>
+          <h2>Locations</h2>
+        </section>
+        <section>
+          <h2>Merch</h2>
+          <img src="images/shirt.jpg"/>
+        </section>
+        <aside>
+          <p> Join the fun on our Instagram!</p>
+          <!-- <div>instagram feed rolling</div> -->
+        </aside>
+        <section>
+          <h4>Served fresh daily 6am to 6pm</h4>
+          <h5>Washington's best coffee and original salmon cookies</h5>
+        </section>
+        
+      </main>
+      <footer>
+        <p>Contact us at info@salmoncookies.com</p>
+      </footer>
+    </body>
+  </html>
