styling changes to 3 pages

--- a/sales.html
+++ b/sales.html
@@ -9,17 +9,20 @@
   </head>
   <body>
     <header>
-      <h1>Pat's Salmon Cookies</h1>
-      <h2>Sales Page</h2>
-    </head>
-    <a href="index.html">Home Page</a>
+      <h1><span>Pat's Salmon Cookies</span><br>Sales Page</h2>
     </header>
+    <nav>
+    <a href="index.html">Home Page</a>
+    </nav>
+   
     <main>
       <table>
         <tbody id="table"></tbody>
       </table>
     </main>
     <footer>
+      <img src="images/salmon.png" alt="fish"/>
+      <p>&copy 2020 Marta Anthony</p>
     </footer>
     <script src="js/app2.js"></script>
   </body>
