rendered form results

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
           <li><a href="#locations">Locations</a></li>
           <li><a href="#merch">Merch</a></li>
           <li><a href="sales.html">Sales Page</a></li>
+          <li><a href="form.html">New Location Form</a></li>
         </ul>
       </nav>
       <hr>
