--- a/sales.html
+++ b/sales.html
@@ -19,6 +19,23 @@
       <table>
         <tbody id="table"></tbody>
       </table>
+      <form id="form">
+        <fieldset>
+          <label>Location Name</label>
+          <input name="locName" type="text"/>
+          <br>
+          <label>Expected minimum number of customers per hour</label>
+          <input name="minCust" type="number"/>
+          <br>
+          <label>Expected maximum number of customers per hour</label>
+          <input name="maxCust" type="number"/>
+          <br>
+          <label>Average number of cookies per customer</label>
+          <input name="avCookieSalePerCust" type="number"/>
+          <br>
+          <button type="submit" name="submit">Submit</button>
+        </fieldset>
+       </form> 
     </main>
     <footer>
       <img src="images/salmon.png" alt="fish"/>
